[package]
name = "eix"
version = "0.3.0"
edition = "2024"
description = "Library for handling the EIX-file format of Gentoo Linux"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Komplix/eix-lib"
keywords = ["gentoo", "portage", "eix", "parser"]
categories = ["parsing", "os::linux-apis"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

